--- a/index.html
+++ b/index.html
@@ -4,9 +4,89 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Carlos Garcia</title>
     <link rel="stylesheet" href="./styles/index.css" />
-    <script src="./app.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <script src="./app.js" async></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__home-container">
+        <a href="" class="header__home">
+          <span class="material-symbols-outlined"> home </span>
+        </a>
+      </div>
+      <div class="header__nav-container">
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-list-item">
+              <a href="" class="header__nav-list-link">About Me</a>
+            </li>
+            <li class="header__nav-list-item">
+              <a href="" class="header__nav-list-link">Projects</a>
+            </li>
+            <li class="header__nav-list-item">
+              <a href="" class="header__nav-list-link">Skills</a>
+            </li>
+            <li class="header__nav-list-item">
+              <a href="" class="header__nav-list-link">Contact Me</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Hero -->
+    <section class="hero">
+      <div class="hero__greeting-container">
+        <h1 class="hero__greeting-title">Carlos Garcia</h1>
+        <h2 class="hero__greeting-subtitle">Full Stack Engineer</h2>
+        <div class="hero__greeting-icon-container">
+          <a href="" class="hero__greeting-icon">
+            <img src="./resources/images/github-mark-white.svg" alt="" />
+          </a>
+          <a href="" class="hero__greeting-icon">
+            <img src="./resources/images/LI-In-Bug.png" alt="" />
+          </a>
+        </div>
+      </div>
+      <div class="hero__start-button-container">
+        <a
+          href="./resources/documents/CV2021.pdf"
+          download="Carlos Garcia Resume"
+          class="hero__start-button"
+          >Resume</a
+        >
+      </div>
+    </section>
+
+    <!-- About Me -->
+    <section class="about-me">
+      <div class="about-me__introduction-container">
+        <h3 class="about-me__introduction-title">Hi! I'm Carlos Garcia</h3>
+        <p class="about-me__introduction-description">
+          I am a self-taught passionate developer based in Guadalajara, Jalisco,
+          Mexico. I like new challenges and learn as much as I can from them. I
+          have a lot of fun researching, writing code and seeing how new things
+          can be created from scratch.
+        </p>
+      </div>
+      <div class="about-me__image-container">
+        <img
+          src="./resources/images/memoji.jpg"
+          alt=""
+          class="about-me__image"
+        />
+      </div>
+    </section>
+  </body>
 </html>
