About me section Finished

--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
     <section class="about-me">
       <div class="about-me__introduction-container">
         <h3 class="about-me__introduction-title">Hi! I'm Carlos Garcia</h3>
-        <p class="about-me__introduction-description">
-          I am a self-taught passionate developer based in Guadalajara, Jalisco,
-          Mexico. I like new challenges and learn as much as I can from them. I
-          have a lot of fun researching, writing code and seeing how new things
-          can be created from scratch.
-        </p>
+        <div class="about-me__introduction-description-container">
+          <p class="about-me__introduction-description">
+            I am a self-taught passionate developer based in Guadalajara,
+            Jalisco, Mexico. I like new challenges and learn as much as I can
+            from them. I have a lot of fun researching, writing code and seeing
+            how new things can be created from scratch.
+          </p>
+        </div>
       </div>
       <div class="about-me__image-container">
         <img
@@ -86,6 +88,13 @@
           alt=""
           class="about-me__image"
         />
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="projects">
+      <div class="projects__title-container">
+        <h3 class="projects__title">Pojects</h3>
       </div>
     </section>
   </body>
