Projects section started

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Hero -->
     <section class="hero">
       <div class="hero__greeting-container">
-        <h1 class="hero__greeting-title">Carlos Garcia</h1>
+        <h1 class="hero__greeting-title">Carlos García</h1>
         <h2 class="hero__greeting-subtitle">Full Stack Engineer</h2>
         <div class="hero__greeting-icon-container">
           <a href="" class="hero__greeting-icon">
@@ -94,7 +94,77 @@
     <!-- Projects -->
     <section class="projects">
       <div class="projects__title-container">
-        <h3 class="projects__title">Pojects</h3>
+        <h3 class="projects__title">Projects</h3>
+      </div>
+      <div class="projects__card-project-container">
+        <div class="projects__card-project">
+          <img
+            src="./resources/images/password-manager.png"
+            alt=""
+            class="projects__card-project-image"
+          />
+          <h4 class="projects__card-project-title">Password Manager</h4>
+          <p class="projects__card-project-lang">Python</p>
+          <a
+            href="https://github.com/carlos-garcia98/password_manager"
+            class="projects__card-project-button"
+            >Repository</a
+          >
+        </div>
+        <div class="projects__card-project">
+          <img
+            src="./resources/images/Codificador Unicode.png"
+            alt=""
+            class="projects__card-project-image"
+          />
+          <h4 class="projects__card-project-title">Codificador Unicode</h4>
+          <p class="projects__card-project-lang">Python</p>
+          <a
+            href="https://github.com/carlos-garcia98/codificador-unicode"
+            class="projects__card-project-button"
+            >Repository</a
+          >
+        </div>
+        <div class="projects__card-project">
+          <img
+            src="./resources/images/Codificador Unicode.png"
+            alt=""
+            class="projects__card-project-image"
+          />
+          <h4 class="projects__card-project-title">Password Manager</h4>
+          <p class="projects__card-project-lang">Python</p>
+          <a href="" class="projects__card-project-button">Repository</a>
+        </div>
+        <div class="projects__card-project">
+          <img
+            src="./resources/images/Codificador Unicode.png"
+            alt=""
+            class="projects__card-project-image"
+          />
+          <h4 class="projects__card-project-title">Password Manager</h4>
+          <p class="projects__card-project-lang">Python</p>
+          <a href="" class="projects__card-project-button">Repository</a>
+        </div>
+        <div class="projects__card-project">
+          <img
+            src="./resources/images/Codificador Unicode.png"
+            alt=""
+            class="projects__card-project-image"
+          />
+          <h4 class="projects__card-project-title">Password Manager</h4>
+          <p class="projects__card-project-lang">Python</p>
+          <a href="" class="projects__card-project-button">Repository</a>
+        </div>
+        <div class="projects__card-project">
+          <img
+            src="./resources/images/Codificador Unicode.png"
+            alt=""
+            class="projects__card-project-image"
+          />
+          <h4 class="projects__card-project-title">Password Manager</h4>
+          <p class="projects__card-project-lang">Python</p>
+          <a href="" class="projects__card-project-button">Repository</a>
+        </div>
       </div>
     </section>
   </body>
