Projects section finished

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           <a
             href="https://github.com/carlos-garcia98/password_manager"
             class="projects__card-project-button"
+            target="_blank"
             >Repository</a
           >
         </div>
@@ -122,48 +123,71 @@
           <a
             href="https://github.com/carlos-garcia98/codificador-unicode"
             class="projects__card-project-button"
+            target="_blank"
             >Repository</a
           >
         </div>
         <div class="projects__card-project">
           <img
-            src="./resources/images/Codificador Unicode.png"
+            src="./resources/images/credit-card-checker.png"
             alt=""
             class="projects__card-project-image"
           />
-          <h4 class="projects__card-project-title">Password Manager</h4>
-          <p class="projects__card-project-lang">Python</p>
-          <a href="" class="projects__card-project-button">Repository</a>
+          <h4 class="projects__card-project-title">Credit Card Checker</h4>
+          <p class="projects__card-project-lang">JavaScript</p>
+          <a
+            href="https://github.com/carlos-garcia98/credit_card_checker"
+            class="projects__card-project-button"
+            target="_blank"
+            >Repository</a
+          >
         </div>
         <div class="projects__card-project">
           <img
-            src="./resources/images/Codificador Unicode.png"
+            src="./resources/images/tea-cozy.png"
             alt=""
             class="projects__card-project-image"
           />
-          <h4 class="projects__card-project-title">Password Manager</h4>
-          <p class="projects__card-project-lang">Python</p>
-          <a href="" class="projects__card-project-button">Repository</a>
+          <h4 class="projects__card-project-title">Tea Cozy</h4>
+          <p class="projects__card-project-lang">Web</p>
+          <a
+            href="https://carlos-garcia98.github.io/tea-cozy/"
+            class="projects__card-project-button"
+            target="_blank"
+            >Website</a
+          >
         </div>
         <div class="projects__card-project">
           <img
-            src="./resources/images/Codificador Unicode.png"
+            src="./resources/images/ramen-club.png"
             alt=""
             class="projects__card-project-image"
           />
-          <h4 class="projects__card-project-title">Password Manager</h4>
-          <p class="projects__card-project-lang">Python</p>
-          <a href="" class="projects__card-project-button">Repository</a>
+          <h4 class="projects__card-project-title">
+            Ramen Club (Club Website)
+          </h4>
+          <p class="projects__card-project-lang">Web</p>
+          <a
+            href="https://carlos-garcia98.github.io/club_website/"
+            class="projects__card-project-button"
+            target="_blank"
+            >Website</a
+          >
         </div>
         <div class="projects__card-project">
           <img
-            src="./resources/images/Codificador Unicode.png"
+            src="./resources/images/mysterious-organisms.png"
             alt=""
             class="projects__card-project-image"
           />
-          <h4 class="projects__card-project-title">Password Manager</h4>
-          <p class="projects__card-project-lang">Python</p>
-          <a href="" class="projects__card-project-button">Repository</a>
+          <h4 class="projects__card-project-title">Mysterious Organisms</h4>
+          <p class="projects__card-project-lang">JavaScript</p>
+          <a
+            href="https://github.com/carlos-garcia98/mysterious_organism"
+            class="projects__card-project-button"
+            target="_blank"
+            >Repository</a
+          >
         </div>
       </div>
     </section>
