--- a/index.html
+++ b/index.html
@@ -191,5 +191,34 @@
         </div>
       </div>
     </section>
+
+    <!-- Skills -->
+    <section class="skills">
+      <div class="skills__title-container">
+        <h3 class="skills__title">Skills</h3>
+      </div>
+      <div class="skills__skills-container">
+        <img
+          src="resources/images/HTML-5-logo.svg"
+          alt="HTML Logo"
+          class="skills__skill-image"
+        />
+        <img
+          src="resources/images/CSS-3-logo.svg"
+          alt="CSS Logo"
+          class="skills__skill-image"
+        />
+        <img
+          src="resources/images/JavaScript-logo.svg"
+          alt="JavaScript Logo"
+          class="skills__skill-image"
+        />
+        <img
+          src="resources/images/Python-logo.svg"
+          alt="Python Logo"
+          class="skills__skill-image"
+        />
+      </div>
+    </section>
   </body>
 </html>
