--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header class="header">
       <div class="header__home-container">
-        <a href="" class="header__home">
+        <a href="#" class="header__home">
           <span class="material-symbols-outlined"> home </span>
         </a>
       </div>
@@ -29,16 +29,16 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-list-item">
-              <a href="" class="header__nav-list-link">About Me</a>
+              <a href="#about-me" class="header__nav-list-link">About Me</a>
             </li>
             <li class="header__nav-list-item">
-              <a href="" class="header__nav-list-link">Projects</a>
+              <a href="#projects" class="header__nav-list-link">Projects</a>
             </li>
             <li class="header__nav-list-item">
-              <a href="" class="header__nav-list-link">Skills</a>
+              <a href="#skills" class="header__nav-list-link">Skills</a>
             </li>
             <li class="header__nav-list-item">
-              <a href="" class="header__nav-list-link">Contact Me</a>
+              <a href="#contact-me" class="header__nav-list-link">Contact Me</a>
             </li>
           </ul>
         </nav>
@@ -51,10 +51,18 @@
         <h1 class="hero__greeting-title">Carlos García</h1>
         <h2 class="hero__greeting-subtitle">Full Stack Engineer</h2>
         <div class="hero__greeting-icon-container">
-          <a href="" class="hero__greeting-icon">
+          <a
+            href="https://github.com/carlos-garcia98"
+            class="hero__greeting-icon"
+            target="_blank"
+          >
             <img src="./resources/images/github-mark-white.svg" alt="" />
           </a>
-          <a href="" class="hero__greeting-icon">
+          <a
+            href="https://www.linkedin.com/in/carlos-garc%C3%ADa-a4b167138/"
+            class="hero__greeting-icon"
+            target="_blank"
+          >
             <img src="./resources/images/LI-In-Bug.png" alt="" />
           </a>
         </div>
@@ -70,7 +78,7 @@
     </section>
 
     <!-- About Me -->
-    <section class="about-me">
+    <section class="about-me" id="about-me">
       <div class="about-me__introduction-container">
         <h3 class="about-me__introduction-title">Hi! I'm Carlos Garcia</h3>
         <div class="about-me__introduction-description-container">
@@ -92,7 +100,7 @@
     </section>
 
     <!-- Projects -->
-    <section class="projects">
+    <section class="projects" id="projects">
       <div class="projects__title-container">
         <h3 class="projects__title">Projects</h3>
       </div>
@@ -193,7 +201,7 @@
     </section>
 
     <!-- Skills -->
-    <section class="skills">
+    <section class="skills" id="skills">
       <div class="skills__title-container">
         <h3 class="skills__title">Skills</h3>
       </div>
@@ -218,6 +226,57 @@
           alt="Python Logo"
           class="skills__skill-image"
         />
+      </div>
+    </section>
+
+    <!-- Contact Me -->
+    <section class="contact-me" id="contact-me">
+      <div class="contact-me__title-container">
+        <h3 class="contact-me__title">Contact Me</h3>
+        <p class="contact-me__description">
+          Have an interesting project? Let me hear about it!
+        </p>
+        <p class="contact-me__description">Email me to: carlos0698@live.com</p>
+      </div>
+      <div class="contact-me__form-container">
+        <form action="index.html" class="contact-me__form">
+          <input
+            type="text"
+            class="contact-me__form-input"
+            name="name"
+            id="name"
+            placeholder="Name"
+          />
+          <input
+            type="text"
+            class="contact-me__form-input"
+            name="last-name"
+            id="last-name"
+            placeholder="Last Name"
+          />
+          <input
+            type="text"
+            class="contact-me__form-input"
+            name="email"
+            id="email"
+            placeholder="Email"
+          />
+          <input
+            type="text"
+            class="contact-me__form-input"
+            name="subject"
+            id="subject"
+            placeholder="Subject"
+          />
+          <textarea
+            class="contact-me__form-textarea"
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Write your message here"
+          ></textarea>
+        </form>
       </div>
     </section>
   </body>
