Added interactivity with a random background color function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="./app.js" async></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="header__home-container">
         <a href="#" class="header__home">
           <span class="material-symbols-outlined"> home </span>
@@ -75,6 +75,7 @@
           >Resume</a
         >
       </div>
+      <div class="hero__change-color" id="change-color"></div>
     </section>
 
     <!-- About Me -->
